changed some part for main html file

--- a/energy_island_web/index.html
+++ b/energy_island_web/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/5.loader.js";
+      var loaderUrl = buildUrl + "/energy_island_brotli.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/5.data",
-        frameworkUrl: buildUrl + "/5.framework.js",
-        codeUrl: buildUrl + "/5.wasm",
+        dataUrl: buildUrl + "/energy_island_brotli.data.unityweb",
+        frameworkUrl: buildUrl + "/energy_island_brotli.framework.js.unityweb",
+        codeUrl: buildUrl + "/energy_island_brotli.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Island Energy Simulation",
